fix: collapse of nav

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -9,7 +9,7 @@ html {
     }
   }
 
-  @media (max-width: 994px){
+  @media (max-width: 1200px){
     .navbar-header {
       width: 100%;
     }
